@@ -3753,10 +3753,8 @@ public class NXCSession implements Session, ScriptLibraryManager, UserManager, S
 	 * 
 	 * @param evt
 	 *           Event template
-	 * @throws IOException
-	 *            if socket I/O error occurs
-	 * @throws NXCException
-	 *            if NetXMS server returns an error or operation was timed out
+	 * @throws IOException if socket I/O error occurs
+	 * @throws NXCException if NetXMS server returns an error or operation was timed out
 	 */
 	public void modifyEventTemplate(EventTemplate evt) throws IOException, NXCException
 	{
@@ -3770,6 +3768,62 @@ public class NXCSession implements Session, ScriptLibraryManager, UserManager, S
 		sendMessage(msg);
 		waitForRCC(msg.getMessageId());
 	}
+	
+	/**
+	 * Send event to server. Event can be identified either by event code or event name. If event name
+	 * is given, event code will be ignored.
+	 * 
+	 * Node: sending events by name supported by server version 1.1.8 and higher.
+	 * 
+	 * @param eventCode event code. Ignored if event name is not null.
+	 * @param eventName event name. Must be set to null if event identified by code.
+	 * @param objectId Object ID to send event on behalf of. If set to 0, server will determine object ID by client IP address.
+	 * @param parameters event's parameters
+	 * @param userTag event's user tag
+	 * @throws IOException if socket I/O error occurs
+	 * @throws NXCException if NetXMS server returns an error or operation was timed out
+	 */
+	public void sendEvent(long eventCode, String eventName, long objectId, String[] parameters, String userTag) throws IOException, NXCException
+	{
+		final NXCPMessage msg = newMessage(NXCPCodes.CMD_TRAP);
+		msg.setVariableInt32(NXCPCodes.VID_EVENT_CODE, (int)eventCode);
+		if (eventName != null)
+			msg.setVariable(NXCPCodes.VID_EVENT_NAME, eventName);
+		msg.setVariableInt32(NXCPCodes.VID_OBJECT_ID, (int)objectId);
+		msg.setVariable(NXCPCodes.VID_USER_TAG, (userTag != null) ? userTag : "");
+		msg.setVariableInt16(NXCPCodes.VID_NUM_ARGS, parameters.length);
+		long varId = NXCPCodes.VID_EVENT_ARG_BASE;
+		for(int i = 0; i < parameters.length; i++)
+			msg.setVariable(varId++, parameters[i]);
+		sendMessage(msg);
+		waitForRCC(msg.getMessageId());
+	}
+	
+	/**
+	 * Convenience wrapper for sendEvent interface.
+	 * 
+	 * @param eventCode event code
+	 * @param parameters event's parameters
+	 * @throws IOException if socket I/O error occurs
+	 * @throws NXCException if NetXMS server returns an error or operation was timed out
+	 */
+	public void sendEvent(long eventCode, String[] parameters) throws IOException, NXCException
+	{
+		sendEvent(eventCode, null, 0, parameters, null);
+	}	
+	
+	/**
+	 * Convenience wrapper for sendEvent interface.
+	 * 
+	 * @param eventName event name
+	 * @param parameters event's parameters
+	 * @throws IOException if socket I/O error occurs
+	 * @throws NXCException if NetXMS server returns an error or operation was timed out
+	 */
+	public void sendEvent(String eventName, String[] parameters) throws IOException, NXCException
+	{
+		sendEvent(0, eventName, 0, parameters, null);
+	}	
 
 	/**
 	 * Get list of well-known SNMP communities configured on server.
