@@ -10,6 +10,7 @@
 	- Syslog monitor
 	- Event monitor
 - Added common driver for Cisco Catalyst switches with CISCO-STACK-MIB support
+- Implemented event identification by name in sendEvent API
 - New MIBs added: CISCO-STACK-MIB, FDDI-SMT73-MIB
 
 
